# Python-Lock-Screen

./: .flake8  .gitattributes  README.md  main.py  pyproject.toml
